--- a/config.json
+++ b/config.json
@@ -26,6 +26,7 @@
     "proposal_is_activated": false,
     "staking_is_activated": false,
     "proxy_staking_optin_all": false,
+    "proxy_staking_is_opted_in": false,
     "asc_vesting_id": 0,
     "asc_vesting_address": "",
     "algo_wallet_address": "",
@@ -38,8 +39,8 @@
     "indexer_remote_token": "",
     "indexer_remote_port": "",
     "algo_dispenser": "https://dispenser.testnet.aws.algodev.network/?account=",
-    "verbose": false,
-    "proxy_staking_is_opted_in": false
+    "verbose": false
+
   },
   "owner": "LP6QRRBRDTDSP4HF7CSPWJV4AG4QWE437OYHGW7K5Y7DETKCSK5H3HCA7Q",
   "deployer": {
