--- a/config.json
+++ b/config.json
@@ -4,21 +4,21 @@
     "network": "testnet",
     "asc_main_id": 0,
     "asc_main_address": "",
-    "gora_testnet_token_id": 0,
+    "gora_testnet_token_id": 227418519,
     "enforce_gora_token": true,
-    "asc_testnet_main_id": 0,
-    "asc_testnet_main_address": "",
+    "asc_testnet_main_id": 717305879,
+    "asc_testnet_main_address": "5UTBL5ELUVHMLHSLC64VS6DAZT2OWTVMFT6E6CTFVCKXS2ZGU3C7YWACHM",
     "asc_proposal_id": 0,
     "asc_proposal_address": "",
     "asc_staking_id": 0,
     "asc_staking_address": "",
-    "dao_asa_id": 0,
+    "dao_asa_id": 227418519,
     "proposal_asa_id": 0,
     "staking_asa_id": 0,
-    "dao_dao_deployed": false,
+    "dao_dao_deployed": true,
     "dao_proposal_deployed": false,
     "dao_staking_deployed": false,
-    "dao_asa_distributed": false,
+    "dao_asa_distributed": true,
     "proposal_asa_distributed": false,
     "staking_asa_distributed": false,
     "subscribed_to_dao": false,
@@ -40,7 +40,6 @@
     "indexer_remote_port": "",
     "algo_dispenser": "https://dispenser.testnet.aws.algodev.network/?account=",
     "verbose": false
-
   },
   "owner": "LP6QRRBRDTDSP4HF7CSPWJV4AG4QWE437OYHGW7K5Y7DETKCSK5H3HCA7Q",
   "deployer": {
