--- a/config_example.json
+++ b/config_example.json
@@ -4,7 +4,7 @@
     "network": "testnet",
     "asc_main_id": 0,
     "asc_main_address": "",
-    "gora_testnet_token_id": 0,
+    "gora_testnet_token_id": 227418519,
     "enforce_gora_token": true,
     "asc_testnet_main_id": 0,
     "asc_testnet_main_address": "",
