--- a/config.json
+++ b/config.json
@@ -10,14 +10,14 @@
     "asc_testnet_main_address": "5UTBL5ELUVHMLHSLC64VS6DAZT2OWTVMFT6E6CTFVCKXS2ZGU3C7YWACHM",
     "asc_proposal_id": 0,
     "asc_proposal_address": "",
-    "asc_staking_id": 0,
-    "asc_staking_address": "",
+    "asc_staking_id": 717308727,
+    "asc_staking_address": "DDY7QDPDEY5PUMEVGFW7RWWWTFOR7WNPEEVBLQGK5ASQRHZHO7CLX5IOT4",
     "dao_asa_id": 227418519,
     "proposal_asa_id": 0,
-    "staking_asa_id": 0,
+    "staking_asa_id": 227418519,
     "dao_dao_deployed": true,
     "dao_proposal_deployed": false,
-    "dao_staking_deployed": false,
+    "dao_staking_deployed": true,
     "dao_asa_distributed": true,
     "proposal_asa_distributed": false,
     "staking_asa_distributed": false,
