--- a/config.json
+++ b/config.json
@@ -24,7 +24,7 @@
     "subscribed_to_dao": false,
     "participated_to_proposal": false,
     "proposal_is_activated": false,
-    "staking_is_activated": false,
+    "staking_is_activated": true,
     "proxy_staking_optin_all": false,
     "proxy_staking_is_opted_in": false,
     "asc_vesting_id": 0,
