--- a/config_example.json
+++ b/config_example.json
@@ -124,6 +124,7 @@
     },
     "staking": {
       "proxy_staking_main_app_id": 253775752,
+      "proxy_staking_vesting_app_id": 259104850,
       "staking_params": {
         "staking_min_algo": 0,
         "staking_min_token": 25,
