--- a/config.json
+++ b/config.json
@@ -10,8 +10,8 @@
     "asc_testnet_main_address": "5UTBL5ELUVHMLHSLC64VS6DAZT2OWTVMFT6E6CTFVCKXS2ZGU3C7YWACHM",
     "asc_proposal_id": 0,
     "asc_proposal_address": "",
-    "asc_staking_id": 717352049,
-    "asc_staking_address": "WU3PIWBTA6AKG4NXIAQHWHHSGAEB62DINMJBILASMBJRFVBCO7FSG5J7JI",
+    "asc_staking_id": 717536687,
+    "asc_staking_address": "73BCI6H7AARFFTGSA5H4YKPGFBMNSS5UUDDTMPI36AC6PB2L2YAQOVEVIA",
     "dao_asa_id": 227418519,
     "proposal_asa_id": 0,
     "staking_asa_id": 227418519,
@@ -20,7 +20,7 @@
     "dao_staking_deployed": true,
     "dao_asa_distributed": true,
     "proposal_asa_distributed": false,
-    "staking_asa_distributed": false,
+    "staking_asa_distributed": true,
     "subscribed_to_dao": false,
     "participated_to_proposal": false,
     "proposal_is_activated": false,
