--- a/config.json
+++ b/config.json
@@ -16,13 +16,14 @@
     "proposal_asa_id": 0,
     "staking_asa_id": 227418519,
     "dao_dao_deployed": true,
-    "dao_proposal_deployed": false,
-    "staking_is_activated": true,
-    "dao_staking_deployed": true,
     "dao_asa_distributed": true,
-    "proposal_asa_distributed": false,
-    "staking_asa_distributed": true,
     "subscribed_to_dao": false,
+    "dao_staking_deployed": true,
+    "staking_is_activated": true,
+    "staking_asa_distributed": true,
+    "staking_is_staked": true,
+    "dao_proposal_deployed": false,
+    "proposal_asa_distributed": false,
     "participated_to_proposal": false,
     "proposal_is_activated": false,
  
