--- a/config_example.json
+++ b/config_example.json
@@ -16,15 +16,16 @@
     "proposal_asa_id": 0,
     "staking_asa_id": 0,
     "dao_dao_deployed": false,
-    "dao_proposal_deployed": false,
-    "dao_staking_deployed": false,
-    "proposal_is_activated": false,
     "dao_asa_distributed": false,
-    "proposal_asa_distributed": false,
-    "staking_asa_distributed": false,
     "subscribed_to_dao": false,
-    "participated_to_proposal": false,
+    "dao_staking_deployed": false,
     "staking_is_activated": false,
+    "staking_is_staked": false,
+    "staking_asa_distributed": false,
+    "dao_proposal_deployed": false,
+    "proposal_is_activated": false,
+    "proposal_asa_distributed": false,
+    "participated_to_proposal": false,
     "proxy_staking_optin_all": false,
     "proxy_staking_is_opted_in": false,
     "asc_vesting_id": 0,
