--- a/config.json
+++ b/config.json
@@ -10,8 +10,8 @@
     "asc_testnet_main_address": "5UTBL5ELUVHMLHSLC64VS6DAZT2OWTVMFT6E6CTFVCKXS2ZGU3C7YWACHM",
     "asc_proposal_id": 0,
     "asc_proposal_address": "",
-    "asc_staking_id": 717536687,
-    "asc_staking_address": "73BCI6H7AARFFTGSA5H4YKPGFBMNSS5UUDDTMPI36AC6PB2L2YAQOVEVIA",
+    "asc_staking_id": 717567053,
+    "asc_staking_address": "I7S2IZF6ILJXEGBV2UVVXZVP6EOGH5YJXJZ6ANC2QFWJ5QZET77RGUO5NI",
     "dao_asa_id": 227418519,
     "proposal_asa_id": 0,
     "staking_asa_id": 227418519,
@@ -21,12 +21,11 @@
     "dao_staking_deployed": true,
     "staking_is_activated": true,
     "staking_asa_distributed": true,
-    "staking_is_staked": true,
+    "staking_is_staked": false,
     "dao_proposal_deployed": false,
     "proposal_asa_distributed": false,
     "participated_to_proposal": false,
     "proposal_is_activated": false,
- 
     "proxy_staking_optin_all": false,
     "proxy_staking_is_opted_in": false,
     "asc_vesting_id": 0,
