New updates on V3

--- a/config.json
+++ b/config.json
@@ -10,8 +10,8 @@
     "asc_testnet_main_address": "5UTBL5ELUVHMLHSLC64VS6DAZT2OWTVMFT6E6CTFVCKXS2ZGU3C7YWACHM",
     "asc_proposal_id": 0,
     "asc_proposal_address": "",
-    "asc_staking_id": 717654145,
-    "asc_staking_address": "M6P6HJWKGWH6V5L6BZNWVXZJSPJSSOD5KUKKVYHCI67TDVIVG73HDRG2JY",
+    "asc_staking_id": 717948297,
+    "asc_staking_address": "Y3XN6KWE3Y2GVFC6KPEWHWADH2YVV6JRQJS7BBSXWIO22BRBBRUTIKWSQQ",
     "dao_asa_id": 227418519,
     "proposal_asa_id": 0,
     "staking_asa_id": 227418519,
@@ -19,9 +19,9 @@
     "dao_asa_distributed": true,
     "subscribed_to_dao": false,
     "dao_staking_deployed": true,
-    "staking_is_activated": true,
-    "staking_is_staked": true,
-    "staking_is_unstaked": true,
+    "staking_is_activated": false,
+    "staking_is_staked": false,
+    "staking_is_unstaked": false,
     "staking_asa_distributed": true,
     "dao_proposal_deployed": false,
     "proposal_asa_distributed": false,
