--- a/config.json
+++ b/config.json
@@ -19,7 +19,7 @@
     "dao_asa_distributed": true,
     "subscribed_to_dao": false,
     "dao_staking_deployed": true,
-    "staking_is_activated": false,
+    "staking_is_activated": true,
     "staking_is_staked": false,
     "staking_is_unstaked": false,
     "staking_asa_distributed": true,
