--- a/config.json
+++ b/config.json
@@ -20,8 +20,8 @@
     "subscribed_to_dao": false,
     "dao_staking_deployed": true,
     "staking_is_activated": true,
-    "staking_is_staked": false,
-    "staking_is_unstaked": false,
+    "staking_is_staked": true,
+    "staking_is_unstaked": true,
     "staking_asa_distributed": true,
     "dao_proposal_deployed": false,
     "proposal_asa_distributed": false,
