--- a/config.json
+++ b/config.json
@@ -10,8 +10,8 @@
     "asc_testnet_main_address": "5UTBL5ELUVHMLHSLC64VS6DAZT2OWTVMFT6E6CTFVCKXS2ZGU3C7YWACHM",
     "asc_proposal_id": 0,
     "asc_proposal_address": "",
-    "asc_staking_id": 717956750,
-    "asc_staking_address": "PWM3CY56ER7NI46AZQIZZHQRZZOZ6UV3B2JVWNR2MHIR6DPPITECXWKBJY",
+    "asc_staking_id": 718080455,
+    "asc_staking_address": "2HHUOCBCCW5GU7LAMC5AA2JHYXNL5SEM5N2QVQ3HIAMBY4EYBR6TVPQBHM",
     "dao_asa_id": 227418519,
     "proposal_asa_id": 0,
     "staking_asa_id": 227418519,
@@ -21,7 +21,7 @@
     "dao_staking_deployed": true,
     "staking_is_activated": true,
     "staking_is_staked": true,
-    "staking_is_unstaked": true,
+    "staking_is_unstaked": false,
     "staking_asa_distributed": true,
     "dao_proposal_deployed": false,
     "proposal_asa_distributed": false,
