--- a/config.json
+++ b/config.json
@@ -10,18 +10,18 @@
     "asc_testnet_main_address": "5UTBL5ELUVHMLHSLC64VS6DAZT2OWTVMFT6E6CTFVCKXS2ZGU3C7YWACHM",
     "asc_proposal_id": 0,
     "asc_proposal_address": "",
-    "asc_staking_id": 718080455,
-    "asc_staking_address": "2HHUOCBCCW5GU7LAMC5AA2JHYXNL5SEM5N2QVQ3HIAMBY4EYBR6TVPQBHM",
+    "asc_staking_id": 0,
+    "asc_staking_address": "",
     "dao_asa_id": 227418519,
     "proposal_asa_id": 0,
     "staking_asa_id": 227418519,
     "dao_dao_deployed": true,
     "dao_asa_distributed": true,
     "subscribed_to_dao": false,
-    "dao_staking_deployed": true,
-    "staking_is_activated": true,
-    "staking_is_staked": true,
-    "staking_is_unstaked": true,
+    "dao_staking_deployed": false,
+    "staking_is_activated": false,
+    "staking_is_staked": false,
+    "staking_is_unstaked": false,
     "staking_asa_distributed": true,
     "dao_proposal_deployed": false,
     "proposal_asa_distributed": false,
