--- a/config.json
+++ b/config.json
@@ -162,17 +162,17 @@
       {
         "asset": 718450819,
         "value": 6,
-        "isLocked": false
+        "isLocked": true
       },
       {
         "asset": 718450820,
         "value": 10,
-        "isLocked": false
+        "isLocked": true
       },
       {
         "asset": 718450821,
         "value": 7,
-        "isLocked": false
+        "isLocked": true
       }
     ]
   }
