--- a/config.json
+++ b/config.json
@@ -162,7 +162,7 @@
       {
         "asset": 718450819,
         "value": 6,
-        "isLocked": false
+        "isLocked": true
       },
       {
         "asset": 718450820,
