--- a/config.json
+++ b/config.json
@@ -167,7 +167,7 @@
       {
         "asset": 718614568,
         "value": 9,
-        "isLocked": false
+        "isLocked": true
       },
       {
         "asset": 718614569,
