--- a/config.json
+++ b/config.json
@@ -10,18 +10,18 @@
     "asc_testnet_main_id": 718248103,
     "asc_testnet_main_address": "QCYOWILL4PWM77U4IKFLXJY4ESJC76HY4KIS7U22JDGLF6MAJOWBN3VWFM",
     "asc_proposal_id": 0,
-    "asc_testnet_proposal_id": 0,
     "asc_proposal_address": "",
+    "asc_testnet_proposal_id": 0,
     "asc_testnet_proposal_address": "",
-    "asc_staking_id": 718248288,
-    "asc_staking_address": "45YOV2QJRGAIUAYC54JQGQQCSRA4V65ZJ5RDG4MEJHHGOBWLYXXWNZVOWU",
+    "asc_staking_id": 0,
+    "asc_staking_address": "",
     "asc_testnet_staking_id": 718248288,
     "asc_testnet_staking_address": "45YOV2QJRGAIUAYC54JQGQQCSRA4V65ZJ5RDG4MEJHHGOBWLYXXWNZVOWU",
-    "dao_asa_id": 227418519,
+    "dao_asa_id": 0,
     "dao_testnet_asa_id": 227418519,
     "proposal_asa_id": 0,
     "proposal_testnet_asa_id": 0,
-    "staking_asa_id": 227418519,
+    "staking_asa_id": 0,
     "staking_testnet_asa_id": 227418519,
     "dao_dao_deployed": true,
     "dao_asa_distributed": true,
