--- a/config.json
+++ b/config.json
@@ -170,12 +170,12 @@
       {
         "asset": 718614536,
         "value": 6,
-        "isLocked": true
+        "isLocked": false
       },
       {
         "asset": 718614568,
         "value": 9,
-        "isLocked": true
+        "isLocked": false
       },
       {
         "asset": 718614569,
