--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "gora_dao": {
     "host": "",
-    "network": "testnet",
+    "network": "mainnet",
     "asc_main_id": 0,
     "asc_main_address": "",
     "gora_testnet_token_id": 227418519,
