--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
     "asc_main_id": 0,
     "asc_main_address": "",
     "gora_testnet_token_id": 227418519,
-    "gora_token_id": 0,
+    "gora_token_id": 1138500612,
     "enforce_gora_token": true,
     "asc_testnet_main_id": 718248103,
     "asc_testnet_main_address": "QCYOWILL4PWM77U4IKFLXJY4ESJC76HY4KIS7U22JDGLF6MAJOWBN3VWFM",
@@ -17,19 +17,19 @@
     "asc_staking_address": "",
     "asc_testnet_staking_id": 718248288,
     "asc_testnet_staking_address": "45YOV2QJRGAIUAYC54JQGQQCSRA4V65ZJ5RDG4MEJHHGOBWLYXXWNZVOWU",
-    "dao_asa_id": 227418519,
+    "dao_asa_id": 1138500612,
     "dao_testnet_asa_id": 227418519,
     "proposal_asa_id": 0,
     "proposal_testnet_asa_id": 0,
-    "staking_asa_id": 0,
+    "staking_asa_id": 1138500612,
     "staking_testnet_asa_id": 227418519,
-    "dao_dao_deployed": true,
-    "dao_asa_distributed": true,
+    "dao_dao_deployed": false,
+    "dao_asa_distributed": false,
     "subscribed_to_dao": false,
-    "dao_staking_deployed": true,
-    "staking_is_activated": true,
-    "staking_is_staked": true,
-    "staking_is_unstaked": true,
+    "dao_staking_deployed": false,
+    "staking_is_activated": false,
+    "staking_is_staked": false,
+    "staking_is_unstaked": false,
     "staking_asa_distributed": true,
     "dao_proposal_deployed": false,
     "proposal_is_activated": false,
