--- a/config.json
+++ b/config.json
@@ -2,13 +2,13 @@
   "gora_dao": {
     "host": "",
     "network": "mainnet",
-    "asc_main_id": 0,
-    "asc_main_address": "",
+    "asc_main_id": 2275127077,
+    "asc_main_address": "CTVIFPHVFJBXSKWRWG7JZ3GVYQSXFKQVRMMDUCJ3K2JA6W36NDHBOO4IDM",
     "gora_testnet_token_id": 227418519,
     "gora_token_id": 1138500612,
     "enforce_gora_token": true,
-    "asc_testnet_main_id": 718248103,
-    "asc_testnet_main_address": "QCYOWILL4PWM77U4IKFLXJY4ESJC76HY4KIS7U22JDGLF6MAJOWBN3VWFM",
+    "asc_testnet_main_id": 0,
+    "asc_testnet_main_address": "",
     "asc_proposal_id": 0,
     "asc_proposal_address": "",
     "asc_testnet_proposal_id": 0,
@@ -23,8 +23,8 @@
     "proposal_testnet_asa_id": 0,
     "staking_asa_id": 1138500612,
     "staking_testnet_asa_id": 227418519,
-    "dao_dao_deployed": false,
-    "dao_asa_distributed": false,
+    "dao_dao_deployed": true,
+    "dao_asa_distributed": true,
     "subscribed_to_dao": false,
     "dao_staking_deployed": false,
     "staking_is_activated": false,
@@ -167,8 +167,8 @@
       }
     },
     "staking_mainnet": {
-      "proxy_staking_main_app_id": 253775752,
-      "proxy_staking_vesting_app_id": 259104850,
+      "proxy_staking_main_app_id": 1140801821,
+      "proxy_staking_vesting_app_id": 1151926724,
       "proxy_staking_main_app_address": "MFSARDKZCVWI4C4U7C665BHZG3KZM3QFNNKHP2QJS3LWZVIXA5TKY2L6XQ",
       "staking_params": {
         "staking_min_algo": 0,
