--- a/config.json
+++ b/config.json
@@ -13,8 +13,8 @@
     "asc_proposal_address": "",
     "asc_testnet_proposal_id": 0,
     "asc_testnet_proposal_address": "",
-    "asc_staking_id": 0,
-    "asc_staking_address": "",
+    "asc_staking_id": 2275185744,
+    "asc_staking_address": "EUNMHS2YDEUT4VV5FE6TRKSYZJNPAQXB4CTLUWNUDMBOIRWNAT5JHLJ6XU",
     "asc_testnet_staking_id": 718248288,
     "asc_testnet_staking_address": "45YOV2QJRGAIUAYC54JQGQQCSRA4V65ZJ5RDG4MEJHHGOBWLYXXWNZVOWU",
     "dao_asa_id": 1138500612,
@@ -26,8 +26,8 @@
     "dao_dao_deployed": true,
     "dao_asa_distributed": true,
     "subscribed_to_dao": false,
-    "dao_staking_deployed": false,
-    "staking_is_activated": false,
+    "dao_staking_deployed": true,
+    "staking_is_activated": true,
     "staking_is_staked": false,
     "staking_is_unstaked": false,
     "staking_asa_distributed": true,
