--- a/config.json
+++ b/config.json
@@ -28,8 +28,8 @@
     "subscribed_to_dao": false,
     "dao_staking_deployed": true,
     "staking_is_activated": true,
-    "staking_is_staked": false,
-    "staking_is_unstaked": false,
+    "staking_is_staked": true,
+    "staking_is_unstaked": true,
     "staking_asa_distributed": true,
     "dao_proposal_deployed": false,
     "proposal_is_activated": false,
@@ -203,22 +203,19 @@
     },
     "nft_staking_test_assets": [
       {
-        "asset": 718614536,
-        "value": 6,
-        "isLocked": true,
-        "sentTo": "KRMMRFQ4EL2SEI672MW3MDYKFKTFQTBP2MOGHA6MWFRL6EL45NRDPP4TYA"
+        "asset": 2275218836,
+        "value": 9,
+        "isLocked": false
       },
       {
-        "asset": 718614568,
-        "value": 9,
-        "isLocked": false,
-        "sentTo": "KRMMRFQ4EL2SEI672MW3MDYKFKTFQTBP2MOGHA6MWFRL6EL45NRDPP4TYA"
+        "asset": 2275218894,
+        "value": 5,
+        "isLocked": false
       },
       {
-        "asset": 718614569,
-        "value": 9,
-        "isLocked": false,
-        "sentTo": "KRMMRFQ4EL2SEI672MW3MDYKFKTFQTBP2MOGHA6MWFRL6EL45NRDPP4TYA"
+        "asset": 2275218998,
+        "value": 5,
+        "isLocked": false
       }
     ]
   }
