--- a/config.json
+++ b/config.json
@@ -205,15 +205,118 @@
       {
         "asset": 2275218836,
         "value": 9,
-        "isLocked": false
+        "isLocked": false,
+        "sentTo": "LP6QRRBRDTDSP4HF7CSPWJV4AG4QWE437OYHGW7K5Y7DETKCSK5H3HCA7Q"
       },
       {
         "asset": 2275218894,
         "value": 5,
-        "isLocked": false
+        "isLocked": false,
+        "sentTo": "LP6QRRBRDTDSP4HF7CSPWJV4AG4QWE437OYHGW7K5Y7DETKCSK5H3HCA7Q"
       },
       {
         "asset": 2275218998,
+        "value": 5,
+        "isLocked": false,
+        "sentTo": "LP6QRRBRDTDSP4HF7CSPWJV4AG4QWE437OYHGW7K5Y7DETKCSK5H3HCA7Q"
+      },
+      {
+        "asset": 2275244046,
+        "value": 9,
+        "isLocked": false,
+        "sentTo": "JXBZUGDHQOUSO2UEKUSQXJD57DJEJVUESIM5BJUQKY5ZZHESGVXROCFYWM"
+      },
+      {
+        "asset": 2275244114,
+        "value": 9,
+        "isLocked": false,
+        "sentTo": "JXBZUGDHQOUSO2UEKUSQXJD57DJEJVUESIM5BJUQKY5ZZHESGVXROCFYWM"
+      },
+      {
+        "asset": 2275244239,
+        "value": 10,
+        "isLocked": false,
+        "sentTo": "JXBZUGDHQOUSO2UEKUSQXJD57DJEJVUESIM5BJUQKY5ZZHESGVXROCFYWM"
+      },
+      {
+        "asset": 2275244364,
+        "value": 8,
+        "isLocked": false,
+        "sentTo": "JGYKOBSUKSRREAV6ZLJKYPBY5NXJV4WNEUCG4VQAZGIFBN7NOEZRJUQU7M"
+      },
+      {
+        "asset": 2275244417,
+        "value": 5,
+        "isLocked": false,
+        "sentTo": "JGYKOBSUKSRREAV6ZLJKYPBY5NXJV4WNEUCG4VQAZGIFBN7NOEZRJUQU7M"
+      },
+      {
+        "asset": 2275244444,
+        "value": 10,
+        "isLocked": false,
+        "sentTo": "JGYKOBSUKSRREAV6ZLJKYPBY5NXJV4WNEUCG4VQAZGIFBN7NOEZRJUQU7M"
+      },
+      {
+        "asset": 2275244613,
+        "value": 9,
+        "isLocked": false,
+        "sentTo": "SVH4BPRSUHCBEIYUHTA32UFONZ5Z2ODA34DCHZEDOMIPZZJ6LCA3JA2SZM"
+      },
+      {
+        "asset": 2275244708,
+        "value": 6,
+        "isLocked": false,
+        "sentTo": "SVH4BPRSUHCBEIYUHTA32UFONZ5Z2ODA34DCHZEDOMIPZZJ6LCA3JA2SZM"
+      },
+      {
+        "asset": 2275244743,
+        "value": 5,
+        "isLocked": false,
+        "sentTo": "SVH4BPRSUHCBEIYUHTA32UFONZ5Z2ODA34DCHZEDOMIPZZJ6LCA3JA2SZM"
+      },
+      {
+        "asset": 2275244786,
+        "value": 7,
+        "isLocked": false,
+        "sentTo": "57M7TV2DL4UGZDWIEBJH22FDQ2R5F63WINZY6JC7FHDUHSMHGO7XNMQA3I"
+      },
+      {
+        "asset": 2275244977,
+        "value": 6,
+        "isLocked": false,
+        "sentTo": "57M7TV2DL4UGZDWIEBJH22FDQ2R5F63WINZY6JC7FHDUHSMHGO7XNMQA3I"
+      },
+      {
+        "asset": 2275245279,
+        "value": 5,
+        "isLocked": false,
+        "sentTo": "57M7TV2DL4UGZDWIEBJH22FDQ2R5F63WINZY6JC7FHDUHSMHGO7XNMQA3I"
+      },
+      {
+        "asset": 2275245584,
+        "value": 9,
+        "isLocked": false,
+        "sentTo": "CDKJIHXFLLO4BZ4ZDDE73O6O734BUE5YS7QAV2ATDN53QKZHUOQECCAPYY"
+      },
+      {
+        "asset": 2275246350,
+        "value": 7,
+        "isLocked": false,
+        "sentTo": "CDKJIHXFLLO4BZ4ZDDE73O6O734BUE5YS7QAV2ATDN53QKZHUOQECCAPYY"
+      },
+      {
+        "asset": 2275246517,
+        "value": 6,
+        "isLocked": false,
+        "sentTo": "CDKJIHXFLLO4BZ4ZDDE73O6O734BUE5YS7QAV2ATDN53QKZHUOQECCAPYY"
+      },
+      {
+        "asset": 2275246659,
+        "value": 5,
+        "isLocked": false
+      },
+      {
+        "asset": 2275246844,
         "value": 5,
         "isLocked": false
       }
