Reimplement .ENV secrets

--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,5 @@ GORADAO_MNEMONIC_3="your mnemonic for DAO user 2 here"
 GORADAO_MNEMONIC_4="your mnemonic for DAO user 3 here"
 GORADAO_MNEMONIC_5="your mnemonic for DAO user 4 here"
 GORADAO_MNEMONIC_6="your mnemonic for DAO user 5 here"
+GORADAO_MNEMONIC_7="your mnemonic for Staking manager here"
 
