--- a/config.json
+++ b/config.json
@@ -23,7 +23,7 @@
     "proposal_testnet_asa_id": 0,
     "staking_asa_id": 1138500612,
     "staking_testnet_asa_id": 227418519,
-    "dao_dao_deployed": true,
+    "dao_dao_deployed": false,
     "dao_asa_distributed": true,
     "subscribed_to_dao": false,
     "dao_staking_deployed": true,
