--- a/config.json
+++ b/config.json
@@ -7,8 +7,8 @@
     "gora_testnet_token_id": 227418519,
     "gora_token_id": 1138500612,
     "enforce_gora_token": true,
-    "asc_testnet_main_id": 0,
-    "asc_testnet_main_address": "",
+    "asc_testnet_main_id": 733685089,
+    "asc_testnet_main_address": "7M6P73M5ZCAUKRPBOFFQA3A7HGHNJCZLQCPMIBKBRWN3PYFWVGIWFNALRQ",
     "asc_proposal_id": 0,
     "asc_proposal_address": "",
     "asc_testnet_proposal_id": 0,
