--- a/config.json
+++ b/config.json
@@ -9,8 +9,8 @@
     "enforce_gora_token": true,
     "asc_testnet_main_id": 733685089,
     "asc_testnet_main_address": "7M6P73M5ZCAUKRPBOFFQA3A7HGHNJCZLQCPMIBKBRWN3PYFWVGIWFNALRQ",
-    "asc_proposal_id": 0,
-    "asc_proposal_address": "",
+    "asc_proposal_id": 733760999,
+    "asc_proposal_address": "6MHQS6GT6RXYZ6YN54LMC4AH2RMPUBRGY6QLI7255HNKK5DMLQGKWPBLCE",
     "asc_testnet_proposal_id": 0,
     "asc_testnet_proposal_address": "",
     "asc_staking_id": 2275538487,
@@ -19,19 +19,19 @@
     "asc_testnet_staking_address": "45YOV2QJRGAIUAYC54JQGQQCSRA4V65ZJ5RDG4MEJHHGOBWLYXXWNZVOWU",
     "dao_asa_id": 1138500612,
     "dao_testnet_asa_id": 227418519,
-    "proposal_asa_id": 733676769,
-    "proposal_testnet_asa_id": 0,
+    "proposal_asa_id": 227418519,
+    "proposal_testnet_asa_id": 227418519,
     "staking_asa_id": 1138500612,
     "staking_testnet_asa_id": 227418519,
-    "dao_dao_deployed": false,
+    "dao_dao_deployed": true,
     "dao_asa_distributed": true,
-    "subscribed_to_dao": false,
+    "subscribed_to_dao": true,
     "dao_staking_deployed": true,
     "staking_is_activated": true,
     "staking_is_staked": true,
     "staking_is_unstaked": true,
     "staking_asa_distributed": true,
-    "dao_proposal_deployed": false,
+    "dao_proposal_deployed": true,
     "proposal_is_activated": false,
     "proposal_asa_distributed": false,
     "participated_to_proposal": false,
