Fix and Update Proposal participate/withdraw

--- a/config.json
+++ b/config.json
@@ -32,9 +32,9 @@
     "staking_is_unstaked": true,
     "staking_asa_distributed": true,
     "dao_proposal_deployed": true,
-    "proposal_is_activated": false,
+    "proposal_is_activated": true,
     "proposal_asa_distributed": true,
-    "participated_to_proposal": true,
+    "participated_to_proposal": false,
     "proxy_staking_optin_all": false,
     "proxy_staking_is_opted_in": false,
     "asc_vesting_id": 0,
