--- a/config.json
+++ b/config.json
@@ -34,7 +34,7 @@
     "dao_proposal_deployed": true,
     "proposal_is_activated": true,
     "proposal_asa_distributed": true,
-    "participated_to_proposal": false,
+    "participated_to_proposal": true,
     "proxy_staking_optin_all": false,
     "proxy_staking_is_opted_in": false,
     "asc_vesting_id": 0,
