--- a/config.json
+++ b/config.json
@@ -11,8 +11,8 @@
     "asc_testnet_main_address": "7M6P73M5ZCAUKRPBOFFQA3A7HGHNJCZLQCPMIBKBRWN3PYFWVGIWFNALRQ",
     "asc_proposal_id": 0,
     "asc_proposal_address": "",
-    "asc_testnet_proposal_id": 733760999,
-    "asc_testnet_proposal_address": "6MHQS6GT6RXYZ6YN54LMC4AH2RMPUBRGY6QLI7255HNKK5DMLQGKWPBLCE",
+    "asc_testnet_proposal_id": 0,
+    "asc_testnet_proposal_address": "",
     "asc_staking_id": 2275538487,
     "asc_staking_address": "6O2SEGD6UEL6AK4QLMB4OGYSQFC54X3PBKFMMKBJM2NKVTOF4NJS3KXAEE",
     "asc_testnet_staking_id": 718248288,
@@ -31,10 +31,10 @@
     "staking_is_staked": true,
     "staking_is_unstaked": true,
     "staking_asa_distributed": true,
-    "dao_proposal_deployed": true,
-    "proposal_is_activated": true,
+    "dao_proposal_deployed": false,
+    "proposal_is_activated": false,
     "proposal_asa_distributed": true,
-    "participated_to_proposal": true,
+    "participated_to_proposal": false,
     "proxy_staking_optin_all": false,
     "proxy_staking_is_opted_in": false,
     "asc_vesting_id": 0,
